[MSS-1075] Fixed Arrows adjustment on mobile

--- a/mvmt/cartridges/app_custom_storefront_mvmt/cartridge/client/default/scss/_miniCart.scss
+++ b/mvmt/cartridges/app_custom_storefront_mvmt/cartridge/client/default/scss/_miniCart.scss
@@ -206,7 +206,12 @@
                                     font-weight: 400;
                                     text-indent: rem(15);
                                     margin-right: rem(20);
-    
+
+                                    @include media-breakpoint-down(sm) {
+                                        font-size: rem(16);
+                                        padding: 0;
+                                    }
+
                                     &::-webkit-inner-spin-button, &::-webkit-outer-spin-button {
                                         -webkit-appearance: none;
                                         margin: 0;
@@ -231,14 +236,12 @@
                                     outline: none;
                                     background-color: $grey2;
                                     color: $grey3;
-                                    @include media-breakpoint-down(xs) {
-                                        width: rem(10);
-                                        height: rem(15);
-                                    }
+
                                     @include media-breakpoint-down(md) {
-                                        width: rem(10);
-                                        height: rem(15);
+                                        width: rem(13);
+                                        height: rem(20);
                                     }
+
                                     &:hover {
                                         background-color: $light-silver;
                                     }
@@ -249,13 +252,10 @@
                                         top: 50%;
                                         left: 50%;
                                         transform: translate(-50%, -50%);
-                                        @include media-breakpoint-down(xs) {
+                                        @include media-breakpoint-down(md) {
                                             width: rem(13);
                                         }
-                                        @include media-breakpoint-down(md) {
-                                            width: rem(11);
-                                        }
-                                    }   
+                                    }
                                 }
                             }
     
